git-svn-id: http://fs:8000/svn/DDG@2649 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/jreality"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/halfedge"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MTJOptimization"/>
+	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
