updated for the new halfedge interface
git-svn-id: http://fs:8000/svn/DDG@2656 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/MTJOptimization"/>
 	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
+	<classpathentry kind="lib" path="/MTJOptimization/lib/mtj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
