Node Property Editor
git-svn-id: http://fs:8000/svn/DDG@3023 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/Hyperbolic Nets"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CurvatureGeometry"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
