git-svn-id: http://fs:8000/svn/DDG@3083 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CurvatureGeometry"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
