git-svn-id: http://fs:8000/svn/DDG@3110 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/CurvatureGeometry"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
+	<classpathentry kind="src" path="/jrworkspace"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
