--- a/.classpath
+++ b/.classpath
@@ -14,11 +14,11 @@
 	<classpathentry kind="lib" path="/MTJOptimization/lib/mtj.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Hyperbolic Nets"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CurvatureGeometry"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
 	<classpathentry kind="src" path="/jrworkspace"/>
+	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
