CurvatureGeometry dependence removed up to remeshing plugins
git-svn-id: http://fs:8000/svn/DDG@3209 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="de/varylab/varylab/plugin/remeshing/|de/varylab/varylab/plugin/subdivision/SplitFacePlugin.java|de/varylab/varylab/plugin/subdivision/StripSubdivisionPlugin.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jreality"/>
@@ -19,6 +19,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
 	<classpathentry kind="src" path="/jrworkspace"/>
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/CurvatureGeometry"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
