--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,9 @@
 	<classpathentry kind="lib" path="lib/jPETScTaoV1.7jPETScTao.jar"/>
 	<classpathentry kind="lib" path="lib/fhlaf_1.0b2_bin.jar"/>
 	<classpathentry kind="lib" path="lib/tinylaf-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica.jar"/>
+	<classpathentry kind="lib" path="lib/syntheticaBlackEye.jar"/>
+	<classpathentry kind="lib" path="lib/syntheticaBatik.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry kind="lib" path="/MTJOptimization/lib/mtj.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
