--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jreality"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/halfedge"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/jreality"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedge"/>
 	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
 	<classpathentry kind="lib" path="lib/fhlaf_1.0b2_bin.jar"/>
 	<classpathentry kind="lib" path="lib/tinylaf-1.4.0.jar"/>
@@ -15,12 +15,12 @@
 	<classpathentry kind="lib" path="lib/vmm.jar"/>
 	<classpathentry kind="lib" path="lib/xploremathplugin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
-	<classpathentry kind="src" path="/jrworkspace"/>
+	<classpathentry exported="true" kind="src" path="/jrworkspace"/>
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="lib" path="lib/jPETScTao.jar"/>
 	<classpathentry kind="output" path="bin"/>
