--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,7 @@
 	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/vmm.jar"/>
 	<classpathentry kind="lib" path="lib/xploremathplugin.jar"/>
+	<classpathentry kind="lib" path="lib/substance-5.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
