--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,9 @@
 	<classpathentry kind="lib" path="lib/CompGeom-0.3_seidel.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
+	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
