tschebyscheff sphere generator
git-svn-id: http://fs:8000/svn/DDG@3820 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="lib" path="lib/jPETScTao.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ellipticFunctions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/mfc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
