--- a/.classpath
+++ b/.classpath
@@ -9,19 +9,17 @@
 	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
 	<classpathentry kind="lib" path="lib/fhlaf_1.0b2_bin.jar"/>
 	<classpathentry kind="lib" path="lib/tinylaf-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/synthetica.jar"/>
-	<classpathentry kind="lib" path="lib/syntheticaBlackEye.jar"/>
-	<classpathentry kind="lib" path="lib/syntheticaBatik.jar"/>
 	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/vmm.jar"/>
 	<classpathentry kind="lib" path="lib/xploremathplugin.jar"/>
-	<classpathentry kind="lib" path="lib/substance-5.0.jar"/>
 	<classpathentry kind="lib" path="lib/CompGeom-0.3_seidel.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
 	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
+	<classpathentry kind="lib" path="lib/substance/substance-6.2.jar"/>
+	<classpathentry kind="lib" path="lib/substance/trident-6.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
