--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/mfc"/>
 	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
