--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,8 @@
 	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
 	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
+	<classpathentry kind="lib" path="lib/jython/jython-standalone-2.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/jython/jython_console_varylab.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
