--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="de/varylab/varylab/plugin/scripting/PythonConsole.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/jreality"/>
@@ -17,8 +17,6 @@
 	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
 	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
-	<classpathentry kind="lib" path="lib/jython/jython-standalone-2.5.3.jar"/>
-	<classpathentry kind="lib" path="lib/jython/jython_console_varylab.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
