--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry excluding="de/varylab/varylab/plugin/scripting/PythonConsole.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
+	<classpathentry kind="src" path="src-python"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/jreality"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedge"/>
