--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry excluding="de/varylab/varylab/plugin/scripting/PythonConsole.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-python"/>
+	<classpathentry kind="src" path="src-website"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/jreality"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedge"/>
