--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,6 @@
 	<classpathentry kind="src" path="src-python"/>
 	<classpathentry kind="src" path="src-website"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/jreality"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedge"/>
 	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
 	<classpathentry kind="lib" path="lib/fhlaf_1.0b2_bin.jar"/>
 	<classpathentry kind="lib" path="lib/tinylaf-1.4.0.jar"/>
@@ -17,18 +15,20 @@
 	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
 	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/halfedgetools"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
-	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="lib" path="lib/jPETScTao.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ellipticFunctions"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/mfc"/>
 	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jreality"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/halfedge"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ellipticFunctions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/mfc"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
