--- a/.classpath
+++ b/.classpath
@@ -5,30 +5,45 @@
 	<classpathentry kind="src" path="src-python"/>
 	<classpathentry kind="src" path="src-website"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/numericalMethods.jar"/>
-	<classpathentry kind="lib" path="lib/fhlaf_1.0b2_bin.jar"/>
-	<classpathentry kind="lib" path="lib/tinylaf-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/CompGeom-0.3_seidel.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/mathematica/bsh-1.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/mathematica/JLink.jar" sourcepath="/MathematicaPlugin"/>
-	<classpathentry kind="lib" path="plugin/MathematicaPlugin.jar"/>
-	<classpathentry kind="lib" path="lib/jPETScTao.jar"/>
 	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/numericalMethods"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/halfedgetools"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jreality"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/halfedge"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/DiscreteConformalLab"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/beans"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/projgeom"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ellipticFunctions"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/mfc"/>
+	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/halfedge.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jReality.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/beans.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/ellipticFunctions.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/mfc.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/projgeom.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/numericalMethods.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/batik-awt-util.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/batik-svggen.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/batik-util.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/DiscreteConformalLab.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/itext-xtra-5.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/itextpdf-5.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jogamp/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="lib/jogamp/jogl-all.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/java2d.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/java2dx.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/modelling.jar"/>
+	<classpathentry kind="lib" path="lib/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/JLink.jar"/>
+	<classpathentry kind="lib" path="lib/xstream/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="lib/xstream/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/MathematicaPlugin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jterm.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jython_console.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/NetUtil.jar"/>
+	<classpathentry kind="lib" path="lib/jreality/sunflow.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
