--- a/.classpath
+++ b/.classpath
@@ -13,9 +13,9 @@
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedge.jar"/>
-	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar"/>
-	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar"/>
-	<classpathentry kind="lib" path="lib/jreality/jReality.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar" sourcepath="/halfedgetools"/>
+	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar" sourcepath="/jrworkspace"/>
+	<classpathentry kind="lib" path="lib/jreality/jReality.jar" sourcepath="/jreality"/>
 	<classpathentry kind="lib" path="lib/jtem/beans.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/ellipticFunctions.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/mfc.jar"/>
@@ -37,6 +37,8 @@
 	<classpathentry kind="lib" path="lib/xstream/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/MathematicaPlugin.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
