update dependencies build file update jreality jar
git-svn-id: http://fs:8000/svn/DDG@4258 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -170,6 +170,7 @@
 			<fileset dir="etc" includes="VaryLab.xml"/>
 			<fileset dir="${release}" includes="${api_jar}"/>
 		</copy>
+		<mkdir dir="${appfolder}/plugin"/>
 	</target>
 	
 	<target name="api jar" depends="compile">
@@ -202,13 +203,6 @@
 				<attribute name="Implementation-URL" value="http://www.varylab.com/"/>
 			</manifest>
 		</jar>
-	</target>
-	
-	<target name="update dependencies">
-		<ant antfile="build.xml" dir="../jrworkspace" target="jrworkspace"/>
-		<copy todir="lib/jtem">
-			<fileset dir="../jrworkspace/jar" includes="jrworkspace.jar"/>
-		</copy>
 	</target>
 	
 	<target name="clean">
