generic release target, gridshells and ultimate targets
git-svn-id: http://fs:8000/svn/DDG@4259 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="lib/conformallab/batik-awt-util.jar"/>
 	<classpathentry kind="lib" path="lib/conformallab/batik-svggen.jar"/>
 	<classpathentry kind="lib" path="lib/conformallab/batik-util.jar"/>
-	<classpathentry kind="lib" path="lib/conformallab/DiscreteConformalLab.jar"/>
+	<classpathentry kind="lib" path="lib/conformallab/DiscreteConformalLab.jar" sourcepath="/DiscreteConformalLab"/>
 	<classpathentry kind="lib" path="lib/conformallab/itext-xtra-5.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/conformallab/itextpdf-5.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jogamp/gluegen-rt.jar"/>
