include quad, checker, hex, and triangle pattern textures. remove default jreality textures.
git-svn-id: http://fs:8000/svn/DDG@4261 986badc2-2932-0410-96f0-8e0caa59e138

--- a/build.xml
+++ b/build.xml
@@ -113,6 +113,9 @@
 				<include name="de/varylab/varylab/plugin/ui/image/**"/>
 				<exclude name="**/ImageHook.java"/>
 			</fileset>
+			<fileset dir="${src}">
+				<include name="de/varylab/varylab/data/**"/>
+			</fileset>
 		</copy>
 	</target>
 	
