--- a/build.xml
+++ b/build.xml
@@ -13,8 +13,10 @@
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
 	<property name="src" value="src"/>
+	<property name="src-test" value="src-test"/>
 	<property name="lib" value="lib"/>
 	<property name="build" value="build"/>
+	<property name="build-test" value="build-test"/>
 	<property name="release" value="release"/>
 	<property name="tmp" value="tmp"/>
 	
@@ -83,17 +85,23 @@
 		<pathelement location="${lib}/mtj.jar"/>	
 		<pathelement location="${lib}/MathematicaPlugin.jar"/>
 	</path>
+	
+	<path id="junit.libraryclasspath">
+		<pathelement location="${lib}/junit/junit-4.11.jar"/>	
+		<pathelement location="${lib}/junit/hamcrest-core-1.3.jar"/>	
+	</path>	
 
     <target name="default" description="This is the VaryLab ant build file." depends="compile"/>
 
 	<target name="create build folders">
 		<mkdir dir="${tmp}"/>
 		<mkdir dir="${build}"/>
+		<mkdir dir="${build-test}"/>
 		<mkdir dir="${release}"/>
 	</target>
 	
 	<target name="compile" depends="create build folders">
-        <javac destdir="${build}" excludesfile="build.exclude" source="${source}" target="${target}" includeantruntime="false">
+        <javac destdir="${build}" excludesfile="build.exclude" source="${source}" target="${target}" includeantruntime="false" encoding="UTF-8">
             <src path="${src}"/>
             <classpath refid="conformallab.libraryclasspath"/>
             <classpath refid="jfreechart.libraryclasspath"/>
@@ -118,6 +126,48 @@
 			</fileset>
 		</copy>
 	</target>
+	
+	
+	<target name="compile and run test suite" depends="compile">
+		<javac destdir="${build-test}" excludesfile="build.exclude" source="${source}" target="${target}" includeantruntime="false" encoding="UTF-8">
+	        <compilerarg line="-Xlint:deprecation"/>
+			<src path="${src-test}"/>
+			<classpath path="${build}"/>
+	        <classpath refid="conformallab.libraryclasspath"/>
+	        <classpath refid="jfreechart.libraryclasspath"/>
+	        <classpath refid="jogamp.libraryclasspath"/>
+	        <classpath refid="jreality.libraryclasspath"/>
+	        <classpath refid="jtem.libraryclasspath"/>
+	        <classpath refid="substance.libraryclasspath"/>
+	        <classpath refid="xstream.libraryclasspath"/>
+	        <classpath refid="misc.libraryclasspath"/>
+	        <classpath refid="junit.libraryclasspath"/>
+	    </javac>
+		<copy todir="${build-test}">
+			<fileset dir="${src-test}" includes="**/testSegments.xml"/>
+		</copy>
+		<junit printsummary="yes" haltonfailure="yes">
+			<classpath path="${build}"/>
+			<classpath path="${build-test}"/>
+			<classpath refid="conformallab.libraryclasspath"/>
+            <classpath refid="jfreechart.libraryclasspath"/>
+            <classpath refid="jogamp.libraryclasspath"/>
+            <classpath refid="jreality.libraryclasspath"/>
+            <classpath refid="jtem.libraryclasspath"/>
+            <classpath refid="substance.libraryclasspath"/>
+            <classpath refid="xstream.libraryclasspath"/>
+            <classpath refid="misc.libraryclasspath"/>
+			<classpath refid="junit.libraryclasspath"/>
+			<batchtest>
+				<fileset dir="${src-test}">
+					<include name="**/*Test.java"/>
+					<include name="**/*Tests.java"/>
+				</fileset>
+				<formatter type="plain" usefile="false"/>
+			</batchtest>
+		</junit>
+	</target>
+	
 	
 	<target name="release [ultimate]">
 		<antcall target="release generic">
@@ -226,6 +276,7 @@
 	
 	<target name="clean">
 		<delete dir="${build}"/>
+		<delete dir="${build-test}"/>
 		<delete dir="${tmp}"/>
 	</target>
 
