--- a/.classpath
+++ b/.classpath
@@ -39,7 +39,6 @@
 	<classpathentry kind="lib" path="lib/MathematicaPlugin.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jterm.jar"/>
@@ -47,5 +46,7 @@
 	<classpathentry kind="lib" path="lib/jreality/jython-standalone-2.5.3.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/NetUtil.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/sunflow.jar"/>
+	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit/junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
