--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
 		<pathelement location="${lib}/junit/hamcrest-core-1.3.jar"/>	
 	</path>	
 
-    <target name="default" description="This is the VaryLab ant build file." depends="compile"/>
+    <target name="default" description="This is the VaryLab ant build file." depends="compile and run test suite"/>
 
 	<target name="create build folders">
 		<mkdir dir="${tmp}"/>
