optimized combined functional to use petsc add methods to avoid loops in java code. refactored functional adapters
git-svn-id: http://fs:8000/svn/DDG@4271 986badc2-2932-0410-96f0-8e0caa59e138

--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
-	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar"/>
+	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar" sourcepath="/jPETSc"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedge.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar" sourcepath="/halfedgetools"/>
 	<classpathentry kind="lib" path="lib/jtem/jrworkspace.jar" sourcepath="/jrworkspace"/>
