--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-python"/>
 	<classpathentry kind="src" path="src-website"/>
+	<classpathentry kind="src" path="src-resource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/CompGeom-0.3_seidel.jar"/>
