--- a/.classpath
+++ b/.classpath
@@ -48,6 +48,10 @@
 	<classpathentry kind="lib" path="lib/junit/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.18.jar"/>
-	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.14.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.14.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.jfree.org/jfreechart/api/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
