--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,8 @@
 	<classpathentry kind="src" path="src-website"/>
 	<classpathentry kind="src" path="src-resource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/CompGeom-0.3_seidel.jar"/>
 	<classpathentry kind="lib" path="lib/substance/substance-6.0.jar" sourcepath="/Substance"/>
 	<classpathentry kind="lib" path="lib/substance/trident-6.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/HyperbolicNets.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/jpetsctao.jar" sourcepath="/jTao"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedge.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/halfedgetools.jar" sourcepath="/halfedgetools"/>
@@ -32,11 +29,8 @@
 	<classpathentry kind="lib" path="lib/jtem/java2d.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/java2dx.jar"/>
 	<classpathentry kind="lib" path="lib/jtem/modelling.jar"/>
-	<classpathentry kind="lib" path="lib/bsh-1.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/JLink.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream/xstream-1.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/MathematicaPlugin.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/colorpicker.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/janino.jar"/>
 	<classpathentry kind="lib" path="lib/jreality/jterm.jar"/>
@@ -46,12 +40,18 @@
 	<classpathentry kind="lib" path="lib/jreality/sunflow.jar"/>
 	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="lib/mtj.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.18.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.14.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://www.jfree.org/jfreechart/api/javadoc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/misc/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/misc/commons-math3-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/misc/CompGeom-0.3_seidel.jar"/>
+	<classpathentry kind="lib" path="lib/misc/HyperbolicNets.jar"/>
+	<classpathentry kind="lib" path="lib/misc/JLink.jar"/>
+	<classpathentry kind="lib" path="lib/misc/MathematicaPlugin.jar"/>
+	<classpathentry kind="lib" path="lib/misc/mtj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
