--- a/default.properties
+++ b/default.properties
@@ -1,3 +1,8 @@
 # default build properties
 release.dir=release
 release.service.dir=release_service
+
+# overwrite in custom.properties
+signStorepass=
+signAlias=
+keystore=etc/varylab.keystore
